Updated ChatColorHandler